<resources>
    <string name="app_name">MessenJ for Android</string>
    <string name="app_name_client">MessenJ for Android - Client</string>
    <string name="app_name_server">MessenJ for Android - Server</string>

    <!-- Strings related to login -->
    <string name="prompt_host">Hostname (IP)</string>
    <string name="prompt_port">Port</string>
    <string name="prompt_number">Number of clients to allow (1–10)</string>
    <string name="prompt_user">Username</string>
    <string name="action_sign_in">Connect</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
